# hass-transportes-pt

./: .gitignore  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.github/: CODEOWNERS  branch-protection.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_provider.yml
.github/workflows/: ci.yml  release.yml  stale.yml
blueprints/automation/transportes_pt/: notify_metro_arriving.yaml  notify_service_alert.yaml  notify_significant_delay.yaml  notify_train_arriving.yaml  notify_transport_arriving.yaml
custom_components/transportes_pt/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
custom_components/transportes_pt/providers/: __init__.py  busway_cira.py  busway_coimbra.py  carris.py  carris_metropolitana.py  cim_tamega_sousa.py  cp.py  fertagus.py  gtfs_base.py  gtfs_rt_utils.py  gtfs_utils.py  guimabus.py  horarios_funchal.py  metro_lisboa.py  metro_porto.py  mobiave.py  mobicascais.py  mts.py  stcp.py  tcb.py  transtejo.py  tub.py  tuba.py
custom_components/transportes_pt/translations/: pt.json
lovelace/: transportes-pt-card.js
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_cp.py  test_device_tracker.py  test_gtfs_base.py  test_gtfs_providers.py  test_gtfs_rt_utils.py  test_metro_lisboa.py  test_metro_porto.py  test_provider.py  test_sensor.py  test_stcp.py  test_transtejo_provider.py
