[project]
name = "hass-transportes-pt"
version = "0.1.0"
description = "Home Assistant custom integration for Portuguese public transit"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.8.0", "gtfs-realtime-bindings>=1.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
